Mobile now avoids the extra button due to lack of auto_play support on mobile. SoundCloud links will now properly react to dark mode! This may require a page refresh between dark mode changes. Moved some of the zing-grid functions to a separate script that I minimized to improve page loads.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -405,6 +405,8 @@ button:focus
 	border: 0
 	background: transparent
 	cursor: pointer
+	-webkit-appearance: none
+	border-radius: 0
 
 .playButton circle
 	fill: $main-color
@@ -432,6 +434,7 @@ button:focus
 	text-decoration: underline 
 	font-family: inherit 
 	font-size: inherit 
+
 .link, footer a 
 	color: #ff5800 !important 
 .link 
